--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<!-- Header -->
 			<header id="header">
 				<h1>Manthan</h1>
-				<p>Student &nbsp;&bull;&nbsp; La Trobe University </p>
+				<p>Student updated &nbsp;&bull;&nbsp; La Trobe University </p>
 				<nav>
 					<ul>
 						<li><a href="https://twitter.com/" class="icon fa-twitter" target="_blank"><span
